--- a/examples/resume/experience.tex
+++ b/examples/resume/experience.tex
@@ -11,10 +11,10 @@
 
 %---------------------------------------------------------
   \cventry
-    {Software Architect} % Job title
-    {Omnious. Co., Ltd.} % Organization
-    {Seoul, S.Korea} % Location
-    {Jun. 2017 - May. 2018} % Date(s)
+    {AVP(Lead Software Engineer)} % Job title
+    {Barclays Global Service Centre Pvt. Ltd.} % Organization
+    {Chennai, Tamilnadu, India} % Location
+    {Feb. 2020 - Present} % Date(s)
     {
       \begin{cvitems} % Description(s) of tasks/responsibilities
         \item {Provisioned an easily managable hybrid infrastructure(Amazon AWS + On-premise) utilizing IaC(Infrastructure as Code) tools like Ansible, Packer and Terraform.}
@@ -25,13 +25,12 @@
         \item {Deployed a centralized monitoring environment(Grafana, InfluxDB, CollectD) which gather system metrics as well as docker run-time metrics.}
       \end{cvitems}
     }
-
 %---------------------------------------------------------
   \cventry
-    {Co-founder \& Software Engineer} % Job title
-    {PLAT Corp.} % Organization
-    {Seoul, S.Korea} % Location
-    {Jan. 2016 - Jun. 2017} % Date(s)
+    {Application Developer Intermediate Programmer Analyst(Senior Software Engineer)} % Job title
+    {Citicorp Services India Pvt. Ltd.} % Organization
+    {Chennai, Tamilnadu, India} % Location
+    {Oct. 2016 - Feb. 2020} % Date(s)
     {
       \begin{cvitems} % Description(s) of tasks/responsibilities
         \item {Implemented RESTful API server for car rental booking application(CARPLAT in Google Play).}
@@ -39,13 +38,12 @@
         \item {Developed an easy-to-use Payment module which connects to major PG(Payment Gateway) companies in Korea.}
       \end{cvitems}
     }
-
 %---------------------------------------------------------
   \cventry
-    {Software Engineer \& Security Researcher (Compulsory Military Service)} % Job title
-    {R.O.K Cyber Command, MND} % Organization
-    {Seoul, S.Korea} % Location
-    {Aug. 2014 - Apr. 2016} % Date(s)
+    {Senior Associate Consultant} % Job title
+    {Infrasoft Technologies Ltd. (Client - BNP Paribas Securities Ltd.)} % Organization
+    {Chennai, Tamilnadu, India} % Location
+    {Sep. 2015 - Oct. 2016} % Date(s)
     {
       \begin{cvitems} % Description(s) of tasks/responsibilities
         \item {Lead engineer on agent-less backtracking system that can discover client device's fingerprint(including public and private IP) independently of the Proxy, VPN and NAT.}
@@ -53,13 +51,12 @@
         \item {Implemented a military cooperation system which is web based real time messenger in Scala on Lift.}
       \end{cvitems}
     }
-
 %---------------------------------------------------------
   \cventry
-    {Game Developer Intern at Global Internship Program} % Job title
-    {NEXON} % Organization
-    {Seoul, S.Korea \& LA, U.S.A} % Location
-    {Jan. 2013 - Feb. 2013} % Date(s)
+    {Senior Application Developer} % Job title
+    {BNY Mellon Technology Pvt. Ltd. (Inautix)} % Organization
+    {Chennai, Tamilnadu, India} % Location
+    {Aug. 2011 - Sep. 2015} % Date(s)
     {
       \begin{cvitems} % Description(s) of tasks/responsibilities
         \item {Developed in Cocos2d-x an action puzzle game(Dragon Buster) targeting U.S. market.}
@@ -67,36 +64,5 @@
         \item {Won the 2nd prize in final evaluation.}
       \end{cvitems}
     }
-
-%---------------------------------------------------------
-  \cventry
-    {Software Engineer} % Job title
-    {ShitOne Corp.} % Organization
-    {Seoul, S.Korea} % Location
-    {Dec. 2011 - Feb. 2012} % Date(s)
-    {
-      \begin{cvitems} % Description(s) of tasks/responsibilities
-        \item {Developed a proxy drive smartphone application which connects proxy driver and customer.}
-        \item {Implemented overall Android application logic and wrote API server for community service, along with lead engineer who designed bidding protocol on raw socket and implemented API server for bidding.}
-      \end{cvitems}
-    }
-
-%---------------------------------------------------------
-  \cventry
-    {Freelance Penetration Tester} % Job title
-    {SAMSUNG Electronics} % Organization
-    {S.Korea} % Location
-    {Sep. 2013, Mar. 2011 - Oct. 2011} % Date(s)
-    {
-      \begin{cvitems} % Description(s) of tasks/responsibilities
-        \item {Conducted penetration testing on SAMSUNG KNOX, which is solution for enterprise mobile security.}
-        \item {Conducted penetration testing on SAMSUNG Smart TV.}
-      \end{cvitems}
-      %\begin{cvsubentries}
-      %  \cvsubentry{}{KNOX(Solution for Enterprise Mobile Security) Penetration Testing}{Sep. 2013}{}
-      %  \cvsubentry{}{Smart TV Penetration Testing}{Mar. 2011 - Oct. 2011}{}
-      %\end{cvsubentries}
-    }
-
-%---------------------------------------------------------
+%--------------------------------------------------------- 
 \end{cventries}
