Added my skills and experience

--- a/examples/resume/experience.tex
+++ b/examples/resume/experience.tex
@@ -17,12 +17,12 @@
     {Feb. 2020 - Present} % Date(s)
     {
       \begin{cvitems} % Description(s) of tasks/responsibilities
-        \item {Provisioned an easily managable hybrid infrastructure(Amazon AWS + On-premise) utilizing IaC(Infrastructure as Code) tools like Ansible, Packer and Terraform.}
-        \item {Built fully automated CI/CD pipelines on CircleCI for containerized applications using Docker, AWS ECR and Rancher.}
-        \item {Designed an overall service architecture and pipelines of the Machine Learning based Fashion Tagging API SaaS product with the micro-services architecture.}
-        \item {Implemented several API microservices in Node.js Koa and in the serverless AWS Lambda functions.}
-        \item {Deployed a centralized logging environment(ELK, Filebeat, CloudWatch, S3) which gather log data from docker containers and AWS resources.}
-        \item {Deployed a centralized monitoring environment(Grafana, InfluxDB, CollectD) which gather system metrics as well as docker run-time metrics.}
+        \item {Architected \& Implemented in-memory reconciliation system from scratch to process high volume intersystem reconciliations}
+        \item {Developed in-memory matching engine to match records with high performance comparing legacy systems}
+        \item {Designed the integration of legacy reconciliation system to report the breaks for management}
+        \item {Helped the teams to identify and mitigate age old tech debt items}
+        \item {Helped the teams to upgrade Java from older versions and fix issues related to it}
+        \item {Redesigned the applications and helped the team to mitigate flash EOL within a short span which had huge business impact}
       \end{cvitems}
     }
 %---------------------------------------------------------
@@ -33,9 +33,11 @@
     {Oct. 2016 - Feb. 2020} % Date(s)
     {
       \begin{cvitems} % Description(s) of tasks/responsibilities
-        \item {Implemented RESTful API server for car rental booking application(CARPLAT in Google Play).}
-        \item {Built and deployed overall service infrastructure utilizing Docker container, CircleCI, and several AWS stack(Including EC2, ECS, Route 53, S3, CloudFront, RDS, ElastiCache, IAM), focusing on high-availability, fault tolerance, and auto-scaling.}
-        \item {Developed an easy-to-use Payment module which connects to major PG(Payment Gateway) companies in Korea.}
+        \item {Developed real-time reconciliation data pipeline using Lambda architecture to crunch billions of records}
+        \item {Redesigned matching layer to achieve 12k messages/sec with sub milli second latency}
+        \item {Migrated the transformation layer from batch to streaming platform (Storm/Kafka) to provide 6X higher performance}
+        \item {Built \& deployed the real-time break management system using Elastic stack to reduce report timing from minutes to seconds}
+        \item {Designed \& Implemented the initial version of CI/CD pipeline using TeamCity and Urbancode Deploy}        
       \end{cvitems}
     }
 %---------------------------------------------------------
@@ -46,9 +48,8 @@
     {Sep. 2015 - Oct. 2016} % Date(s)
     {
       \begin{cvitems} % Description(s) of tasks/responsibilities
-        \item {Lead engineer on agent-less backtracking system that can discover client device's fingerprint(including public and private IP) independently of the Proxy, VPN and NAT.}
-        \item {Implemented a distributed web stress test tool with high anonymity.}
-        \item {Implemented a military cooperation system which is web based real time messenger in Scala on Lift.}
+        \item {Implemented multiple new features to collect and process SWIFT messages from multiple sources every day}
+        \item {Helped the team to identify and fix critical bugs in Corporate action straight through processes}        
       \end{cvitems}
     }
 %---------------------------------------------------------
@@ -59,9 +60,9 @@
     {Aug. 2011 - Sep. 2015} % Date(s)
     {
       \begin{cvitems} % Description(s) of tasks/responsibilities
-        \item {Developed in Cocos2d-x an action puzzle game(Dragon Buster) targeting U.S. market.}
-        \item {Implemented API server which is communicating with game client and In-App Store, along with two other team members who wrote the game logic and designed game graphics.}
-        \item {Won the 2nd prize in final evaluation.}
+        \item {Developed template configuration management system to ease the initial account setup process}
+        \item {Lead the integration of Advisor model management system with New account opening system using RESTful webservices}
+        \item {Fixed some of the performance bottlenecks with the help of Dynatrace reports}
       \end{cvitems}
     }
 %--------------------------------------------------------- 
