--- a/examples/resume.tex
+++ b/examples/resume.tex
@@ -55,7 +55,7 @@
 % Available options: circle|rectangle,edge/noedge,left/right
 % \photo[rectangle,edge,right]{./examples/profile}
 \name{Yuvaraj}{Ravichandran}
-\position{Software Engineer}
+\position{Lead Software Engineer}
 \address{Chennai, Tamilnadu, India}
 
 %\mobile{}
