--- a/examples/resume/skills.tex
+++ b/examples/resume/skills.tex
@@ -5,7 +5,7 @@
         {Java{\enskip\cdotp\enskip}JavaScript{\enskip\cdotp\enskip}Python}
     \cvskill  
         {Tools:}
-        {SQL Server{\enskip\cdotp\enskip}Apache Storm{\enskip\cdotp\enskip}Apache Kafka{\enskip\cdotp\enskip}Apache Cassandra{\enskip\cdotp\enskip}ELK{\enskip\cdotp\enskip}Rocksdb}
+        {MS SQL Server{\enskip\cdotp\enskip}Spring{\enskip\cdotp\enskip}Apache Storm{\enskip\cdotp\enskip}Apache Kafka{\enskip\cdotp\enskip}Apache Cassandra{\enskip\cdotp\enskip}ELK{\enskip\cdotp\enskip}Rocksdb}
     \cvskill  
         {CI/CD:}
         {Bitbucket{\enskip\cdotp\enskip}TeamCity{\enskip\cdotp\enskip}IBM Urbancode Deploy}
