--- a/examples/resume/summary.tex
+++ b/examples/resume/summary.tex
@@ -10,5 +10,5 @@
 \begin{cvparagraph}
 
 %---------------------------------------------------------
-Current Lead Software Engineer at Barclays. Overall 10+ years of experience in building backend systems(mostly using Java), real-time streaming applications. Passionate about solving business problems with Pragmatic solutions, learning new technologies and tools.
+Current Lead Software Engineer at Barclays. Overall 10+ years' of experience in building backend systems, real-time streaming applications. Passionate about solving business problems with Pragmatic solutions, learning new technologies and tools.
 \end{cvparagraph}
