--- a/examples/resume/experience.tex
+++ b/examples/resume/experience.tex
@@ -11,7 +11,7 @@
 
 %---------------------------------------------------------
   \cventry
-    {AVP (Lead Software Engineer)} % Job title
+    {AVP} % Job title
     {Barclays Global Service Centre Pvt. Ltd.} % Organization
     {Chennai, Tamilnadu, India} % Location
     {Feb. 2020 - Present} % Date(s)
@@ -28,7 +28,7 @@
 
 %---------------------------------------------------------
   \cventry
-    {Application Developer Intermediate Programmer Analyst (Senior Software Engineer)} % Job title
+    {Application Developer Intermediate Programmer Analyst} % Job title
     {Citicorp Services India Pvt. Ltd.} % Organization
     {Chennai, Tamilnadu, India} % Location
     {Oct. 2016 - Feb. 2020} % Date(s)
