--- a/examples/resume/skills.tex
+++ b/examples/resume/skills.tex
@@ -1,12 +1,12 @@
 \cvsection{Technical Skills}
 \begin{cvskills}
     \cvskill
-        {Programming Languages:}
-        {Java{\enskip\cdotp\enskip}JavaScript{\enskip\cdotp\enskip}Python}
-    \cvskill  
-        {Tools:}
-        {MS SQL Server{\enskip\cdotp\enskip}Spring{\enskip\cdotp\enskip}Apache Storm{\enskip\cdotp\enskip}Apache Kafka{\enskip\cdotp\enskip}Apache Cassandra{\enskip\cdotp\enskip}ELK{\enskip\cdotp\enskip}Rocksdb}
-    \cvskill  
-        {CI/CD:}
-        {Bitbucket{\enskip\cdotp\enskip}TeamCity{\enskip\cdotp\enskip}IBM Urbancode Deploy}
+        {Programming Languages}
+        {Java, JavaScript, Python}
+    \cvskill
+        {Tools}
+        {MS SQL Server, Spring Boot, Apache Storm, Apache Kafka, Apache Cassandra, Elasticsearch Stack(ELK), Rocksdb, Bitbucket, TeamCity, IBM Urbancode Deploy}
+    \cvskill
+        {Operating Systems}
+        {Linux, Windows}
 \end{cvskills}
