Few changes on important details

--- a/examples/resume.tex
+++ b/examples/resume.tex
@@ -55,15 +55,15 @@
 % Available options: circle|rectangle,edge/noedge,left/right
 % \photo[rectangle,edge,right]{./examples/profile}
 \name{Yuvaraj}{Ravichandran}
-\position{Software Engineer}
+\position{Lead Software Development Engineer{\enskip\cdotp\enskip}Solution Architect}
 \address{Chennai, Tamilnadu, India}
 
-%\mobile{}
+\mobile{+91-95977 62143}
 \email{rkyuvraj@gmail.com}
 %\dateofbirth{January 1st, 1970}
 % \homepage{www.posquit0.com}
 % \github{posquit0}
-% \linkedin{posquit0}
+\linkedin{yuvarajravichandran}
 % \gitlab{gitlab-id}
 % \stackoverflow{SO-id}{SO-name}
 % \twitter{@twit}
