--- a/examples/resume/education.tex
+++ b/examples/resume/education.tex
@@ -11,7 +11,7 @@
 
 %---------------------------------------------------------
   \cventry
-    {B.E in Electrical \& Electronics Engineering} % Degree
+    {Bachelor of Engineering in Electrical and Electronics (CGPA: 8.77/10)} % Degree
     {Sona College of Technology} % Institution
     {Salem, Tamilnadu, India} % Location
     {2007 - 2011} % Date(s)
