Removed unwanted files and updated few details

--- a/examples/resume/skills.tex
+++ b/examples/resume/skills.tex
@@ -2,10 +2,10 @@
 \begin{cvskills}
     \cvskill
         {Programming Languages}
-        {Java, JavaScript, Python}
+        {Java, JavaScript}
     \cvskill
-        {Tools}
-        {MS SQL Server, Spring Boot, Apache Storm, Apache Kafka, Apache Cassandra, Elasticsearch Stack(ELK), Rocksdb, Bitbucket, TeamCity, IBM Urbancode Deploy}
+        {Frameworks \& Tools}
+        {MS SQL Server, Oracle, Spring Framework, Apache Storm, Apache Kafka, Apache Cassandra, Elasticsearch Stack(ELK), Rocksdb, Bitbucket, TeamCity, IBM Urbancode Deploy, Autosys}
     \cvskill
         {Operating Systems}
         {Linux, Windows}
