--- a/examples/resume/summary.tex
+++ b/examples/resume/summary.tex
@@ -10,5 +10,5 @@
 \begin{cvparagraph}
 
 %---------------------------------------------------------
-Current Lead Software Engineer at Barclays. Overall 11+ years' of industry experience in building backend systems, real-time distributed streaming applications. I have a great experience of building a product from scratch. Passionate about solving business problems with Pragmatic solutions based on first principles, and learning new technologies \& tools.
+Lead Software Engineer at Barclays. 11+ years of software engineering experience with specialties in backend systems, distributed \& realtime streaming systems and software design \& architecture. Have gained a great experience of building a product from scratch at an investment banking company which saved millions of pounds in terms of licensing cost against a vendor product. Passionate about solving business problems with Pragmatic solutions based on first principles, and learning new technologies \& tools.
 \end{cvparagraph}
